# RDPRemote

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml
agent/: Cargo.toml
agent/benches/: encoder_bench.rs  roi_bench.rs
agent/src/: adaptive.rs  adaptive_test.rs  auth.rs  clipboard.rs  content_detector.rs  frame_skipper.rs  input.rs  lib.rs  main.rs  roi.rs
agent/src/encoder/: mod.rs  vp9.rs  vp9.rs.bak  vp9_test.rs
agent/src/screen/: dxgi.rs  mod.rs  tests.rs
agent/src/webrtc/: mod.rs  peer.rs
agent/tests/: clipboard.rs  common.rs  pipeline_test.rs  signaling_test.rs  webrtc_test.rs  zerocopy_test.rs
agent/ui/: index.html  script.js  style.css
client/: Cargo.toml
client/src/: clipboard.rs  lib.rs  main.rs
client/src/render/: mod.rs  shader.wgsl  wgpu_renderer.rs
client/src/webrtc/: mod.rs  peer.rs
client/ui/: index.html  script.js  style.css
common/: Cargo.toml
common/src/: clipboard.rs  file_transfer.rs  lib.rs  protocol.rs  signaling.rs
common/tests/: bytes_test.rs  clipboard.rs  clipboard_manager.rs  clipboard_sync.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md
docs/superpowers/plans/: 2026-05-29-phase1a-core-verification.md  2026-05-29-phase1b-network-adaptive.md  2026-05-30-network-optimization.md  2026-05-30-password-authentication.md  2026-05-30-zerocopy-frame-transfer.md  Phase4-Task1-JWT-Auth.md
docs/superpowers/specs/: 2026-05-29-low-bandwidth-remote-desktop-design.md  2026-05-30-vp9-encoder-optimization-design.md
scripts/: build-release.sh  build-windows.bat
server/: Cargo.toml
server/src/: auth.rs  main.rs
turn/: README.md  turnserver.conf
