[package]
name = "rdp-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdp-agent"
path = "src/main.rs"

[lib]
name = "rdp_agent"
path = "src/lib.rs"

[dependencies]
rdp-common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
] }
