[package]
name = "rdp-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdp-agent"
path = "src/main.rs"

[lib]
name = "rdp_agent"
path = "src/lib.rs"

[dependencies]
rdp-common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webrtc = "0.10"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
libvpx-sys = { version = "1.4", optional = true }

[features]
default = ["vpx"]
vpx = ["libvpx-sys"]

[dev-dependencies]
criterion = { workspace = true }

[[test]]
name = "signaling_test"
path = "tests/signaling_test.rs"

[[test]]
name = "webrtc_test"
path = "tests/webrtc_test.rs"

[[test]]
name = "pipeline_test"
path = "tests/pipeline_test.rs"

[[bench]]
name = "encoder_bench"
path = "benches/encoder_bench.rs"
harness = false

[[bench]]
name = "roi_bench"
path = "benches/roi_bench.rs"
harness = false

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }
