[package]
name = "rdp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rdp-common = { path = "../common" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webrtc = "0.12"
bytes = "1"

# WGPU 视频渲染
wgpu = "0.20"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
futures = "0.3"
