[package]
name = "rdp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rdp-common = { path = "../common" }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap = "6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
